<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="148dp"
        android:layout_marginRight="148dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_cart"
        app:tint="@color/white_10"
        android:layout_marginTop="48dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:hint="@string/username"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textSize="12sp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/background_edit_text_login"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/background_edit_text_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textSize="12sp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="44dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/btnEye"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="42dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/button_login"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:translationZ="4dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>