<?xml version="1.0" encoding="utf-8"?>
<com.github.captain_miao.optroundcardview.OptRoundCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:optRoundCardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgCover"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/product_image"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/viewDim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:alpha="0.4"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/imgCover"
            app:layout_constraintEnd_toEndOf="@+id/imgCover"
            app:layout_constraintStart_toStartOf="@+id/imgCover"
            app:layout_constraintTop_toTopOf="@+id/imgCover" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgCover"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/text_line_1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/linearUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLine1"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/price_view" />

                <TextView
                    android:id="@+id/tvLine2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:gravity="end"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearUnit"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/discount_view" />

                <TextView
                    android:id="@+id/tvLine3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearTotalPrice"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/total_price_view" />

                <TextView
                    android:id="@+id/tvLine4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.github.captain_miao.optroundcardview.OptRoundCardView>